# OpenClaw

./: .env.example  .gitignore  MEMORY.md  OPENCLAW_PLANO_RECONTEXTUALIZACAO.md  RELATORIO_REFATORACAO_V1.md  SOUL.md  USER.md  channel_directory.json  config.py  config.yaml  executor.py  extraction.py  fast_patterns.py  intent_resolver.py  memory_context.py  memory_sessions.py  openclaw.json  pyproject.toml  scheduler.py  start.bat  start.sh
agents/: ahri.py  base.py
ahri_memory/: __init__.py  git_sync.py  index.json
ahri_memory/interactions/: mem_a4bb9255.json
memory/: decisions-template.md  lessons-template.md  pending-template.md  people-template.md  projects-template.md
skills/: .bundled_manifest
skills/social-media/clients/: casa-do-bicho.md  dra-verusca-lino.md  ed-telas-e-varais.md  ilheus-iate-clube.md  musicalizando.md  (+1 more)
state/: __init__.py  scores.md  state.json  tasks.md
tests/: MODO_DE_TESTE.md  inject.py  validate.py
tests/fixtures/: client_test.json  state_test.json  task_test.json
tools/: registry.py  supabase.py  trello.py
tools/google/: __init__.py  auth.py  calendar.py  drive.py  gmail.py
workspace/: AGENTS.md  BOOTSTRAP.md  COGNITIVE_FRAMEWORK.md  HEARTBEAT.md  IDENTITY.md  LAYER_CONTRACTS.md  MEMORY-template.md  PERCEPTION_LAYER.md  SOUL.md  TOOLS.md  USER.md  memory-architecture-template.md
workspace/.openclaw/: workspace-state.json
workspace/skills/: base_writing.md  client_fallback.md  content_strategy.md  contextual_connection.md  copy_prime.md  distribution.md  humanizer.md  skill_loader.py  trend_detection.md
(+29 files in other folders)
